Resolves: tdf#118850 disentangle the twisted wrong cell type vs format type

Change-Id: Idb5267c9bc50e8844654c2f2cd0d123fcbb7aa12
Reviewed-on: https://gerrit.libreoffice.org/60026
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins